--- a/test1/reset.css
+++ b/test1/reset.css
@@ -1,6 +1,13 @@
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
 *{
-	box-sizing: border-box;
+    box-sizing: border-box;
+    text-decoration: none;
 }
+
+
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
